# git-mcp-server

./: .gitignore  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
examples/: README.md  claude_desktop_config.json  claude_desktop_docker_config.json  vscode_docker_mcp.json  zed_docker_settings.json  zed_settings.json
mcp_git_server/: __init__.py  config.py  error_handling.py  git_operations.py  logging_config.py  main.py  mcp.py  utils.py
scripts/: build-docker.ps1  build-docker.sh
